UHF-10276: Fix title vertical alignment for dialog title

--- a/src/scss/06_components/messages/_dialog.scss
+++ b/src/scss/06_components/messages/_dialog.scss
@@ -43,6 +43,7 @@
 .dialog__header {
   display: flex;
   flex-direction: row-reverse;
+  justify-content: space-between;
 }
 
 .dialog__content {
